# Linux_V4L2_Camera_Tiny210

./: CAMERA  CMakeLists.txt  CMakeLists.txt~  CMakeLists~  Makefile  V4L2.c  V4L2.h  camera.c  camera.h  decoder.h  decoder_mjpeg.c  decoder_mjpeg.h  libjpeg.so.8  main.c
