cmake_minimum_required(VERSION 2.8)
SET(CMAKE_SYSTEM_NAME Linux)
set(CMAKE_C_COMPILER "/home/work/workshop/licheelinux/out/linux/common/buildroot/external-toolchain/bin/arm-linux-gnueabi-gcc")
PROJECT(main)
#ADD_SUBDIRECTORY( src )
#SET(SRC_LIST main.c camera.c V4L2.c)
AUX_SOURCE_DIRECTORY(. SRC_LIST)
ADD_EXECUTABLE(main ${SRC_LIST})
#TARGET_LINK_LIBRARIES(main TEST)
